[package]
name = "multipart"
version = "0.18.0"
authors = ["Austin Bonander <austin.bonander@gmail.com>"]
repository = "http://github.com/abonander/multipart"
documentation = "http://docs.rs/multipart/"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
log = "0.4"
mime = "0.3.14"
rand = "0.8"
safemem = { version = "0.3", optional = true }
quick-error = "1.2.2"

#Server Dependencies
buf_redux = { version = "0.8", optional = true, default-features = false }
httparse = { version = "1.2", optional = true }
twoway = { version = "0.1", optional = true }

# Optional Integrations
tiny_http = { version = "0.6", optional = true }

[dev-dependencies]
env_logger = "0.5"

[features]
server = ["buf_redux", "httparse", "safemem", "twoway"]
tiny_http = ["dep:tiny_http"]
mock = []
nightly = []

[[example]]
name = "tiny_http"
required-features = ["mock", "tiny_http", "server"]
